--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-merlot
+title: "Project 6 : Classes & Inheritance"
+description: "Something something privledge of the upper class..."
